apps/overseerr/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: overseerr-ingress-ext
  namespace: media
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`overseerr.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: overseerr
          port: main
