apps/overseerr/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: overseerr-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`overseerr.sobrinho.pt`)
      kind: Rule
      services:
        - name: overseerr
          port: main
  tls:
    secretName: overseerr-cert
